# metaphysfs

./: .gitignore  CMakeLists.txt  CMakePresets.json  FetchExternalModule.cmake  README.txt
docs/: CMakeLists.txt
extras/: abs-file.h  globbing.c  globbing.h  ignorecase.c  makecasefoldhashtable.pl  physfshttpd.c  physfsrwops.c  physfsrwops.h  physfssdl3.c  physfssdl3.h  physfsunpack.c  selfextract.c
include/: physfs.hpp
src/: physfs.cpp  physfs_archiver_7z.cpp  physfs_archiver_csm.cpp  physfs_archiver_dir.cpp  physfs_archiver_grp.cpp  physfs_archiver_hog.cpp  physfs_archiver_iso9660.cpp  physfs_archiver_mvl.cpp  physfs_archiver_qpak.cpp  physfs_archiver_slb.cpp  physfs_archiver_unpacked.cpp  physfs_archiver_vdf.cpp  physfs_archiver_wad.cpp  physfs_archiver_zip.cpp  physfs_byteorder.cpp  physfs_casefolding.hpp  physfs_internal.hpp  physfs_lzmasdk.hpp  physfs_miniz.hpp  physfs_platform_android.cpp  physfs_platform_apple.m  physfs_platform_haiku.cpp  physfs_platform_ogc.cpp  physfs_platform_os2.cpp  physfs_platform_playdate.cpp  physfs_platform_posix.cpp  physfs_platform_qnx.cpp  physfs_platform_unix.cpp  physfs_platform_windows.cpp  physfs_platforms.hpp  physfs_tree.cpp  physfs_tree.hpp  physfs_unicode.cpp  physfs_unpk.hpp
src/archivers/: physfs_archiver_7z.cpp  physfs_archiver_csm.cpp  physfs_archiver_dir.cpp  physfs_archiver_grp.cpp  physfs_archiver_hog.cpp  physfs_archiver_iso9660.cpp  physfs_archiver_mvl.cpp  physfs_archiver_qpak.cpp  physfs_archiver_slb.cpp  physfs_archiver_unpacked.cpp  physfs_archiver_vdf.cpp  physfs_archiver_wad.cpp  physfs_archiver_zip.cpp
test/: CMakeLists.txt  test_metaphysfs.cpp
