add_executable(test_physfs test_metaphysfs.cpp)
target_link_libraries(test_physfs PRIVATE ${PHYSFS_LIB_TARGET} ${OTHER_LDFLAGS})

find_path(READLINE_H readline/readline.hpp)
find_path(HISTORY_H readline/history.hpp)
find_library(READLINE_LIBRARY readline)
find_package(Curses)
if(READLINE_H AND HISTORY_H AND READLINE_LIBRARY AND CURSES_FOUND)
    set(HAVE_SYSTEM_READLINE TRUE)
    target_link_libraries(test_physfs PRIVATE ${READLINE_LIBRARY} ${CURSES_LIBRARIES})
    target_include_directories(test_physfs SYSTEM PRIVATE ${READLINE_H} ${HISTORY_H})
    target_compile_definitions(test_physfs PRIVATE PHYSFS_HAVE_READLINE=1)
endif()
